sumo/tests/sumo/output/e1Instant/errors/file_false/errors.sumo
Error: Could not build output file 'xxx/detector.xml' (No such file or directory).
Quitting (on error).
